[BLUM-47] recommended actions
